style: fix breadcrumb valign

--- a/botfront/imports/ui/components/stories/style.import.less
+++ b/botfront/imports/ui/components/stories/style.import.less
@@ -570,7 +570,7 @@
     }
     .breadcrumb-container {
         display: flex;
-        margin-top: 6px;
+        align-self: center;
         max-height: 20px;
         white-space: nowrap;
         .section {
